@@ -1,4 +1,9 @@
 2006-03-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: extended scan for mountpoints (see #333370)
+	  
+2006-03-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Dialog_Partition_Info.cc,
 	  src/GParted_Core.cc: fixed crasher with busy partition without
